--- a/app/src/main/res/layout/category_fragment_title_bar_layout.xml
+++ b/app/src/main/res/layout/category_fragment_title_bar_layout.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
+    android:layout_height="45dp"
     android:background="@color/colorPrimary">
 
     <TextView
-        android:id="@+id/home_title_bar_title"
+        android:id="@+id/category_title_bar_title"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_vertical"
@@ -13,4 +14,39 @@
         android:text="分类标签"
         android:textColor="@android:color/white"
         android:textSize="15sp" />
+
+    <LinearLayout
+        android:id="@+id/category_title_bar_right_menu"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:visibility="gone"
+        app:layout_constraintRight_toRightOf="parent">
+
+
+        <ImageView
+            android:id="@+id/category_title_select_all"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:scaleType="centerCrop"
+            android:background="?attr/selectableItemBackground"
+            android:src="@drawable/ic_select_all_white_24dp" />
+
+        <ImageView
+            android:id="@+id/category_title_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:scaleType="centerCrop"
+            android:background="?attr/selectableItemBackground"
+            android:src="@drawable/ic_delete_white_24dp" />
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
