--- a/app/src/main/res/layout/category_list_add_item_layout.xml
+++ b/app/src/main/res/layout/category_list_add_item_layout.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@android:color/white">
 
     <LinearLayout
         android:id="@+id/category_add_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
+        android:background="?attr/selectableItemBackground"
         android:gravity="center"
         android:orientation="horizontal">
 
         <ImageView
             android:layout_width="28dp"
             android:layout_height="28dp"
-            android:src="@drawable/ic_add_white_48dp" />
+            android:src="@drawable/ic_add_blue_48dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -27,7 +28,7 @@
             android:paddingRight="5dp"
             android:paddingTop="15dp"
             android:text="添加"
-            android:textColor="@android:color/white"
+            android:textColor="@color/colorPrimary"
             android:textSize="16sp" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
