--- a/app/src/main/res/layout/home_list_item_layout.xml
+++ b/app/src/main/res/layout/home_list_item_layout.xml
@@ -6,6 +6,23 @@
     android:background="?attr/selectableItemBackground">
 
     <TextView
+        android:id="@+id/list_item_category"
+        android:layout_width="30dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:background="@drawable/category_type_default_bg"
+        android:gravity="center"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:paddingBottom="6dp"
+        android:paddingTop="6dp"
+        android:text="默认"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
         android:id="@+id/list_item_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -17,7 +34,7 @@
         android:text="这是一个标题"
         android:textColor="@android:color/black"
         android:textSize="16sp"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/list_item_category"
         app:layout_constraintRight_toLeftOf="@+id/list_item_favorite"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -28,11 +45,28 @@
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:text="这是一个副标题"
         android:textColor="@android:color/darker_gray"
         android:textSize="11sp"
+        app:layout_constraintBottom_toTopOf="@+id/list_item_detail"
+        app:layout_constraintLeft_toRightOf="@+id/list_item_category"
+        app:layout_constraintRight_toLeftOf="@+id/list_item_favorite"
+        app:layout_constraintTop_toBottomOf="@+id/list_item_title" />
+
+    <TextView
+        android:id="@+id/list_item_detail"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:ellipsize="end"
+        android:maxLines="3"
+        android:text="这一是啊道具卡吧你手机卡布达哈办健身卡不对哈将本地北京市看"
+        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/list_item_category"
         app:layout_constraintRight_toLeftOf="@+id/list_item_favorite"
         app:layout_constraintTop_toBottomOf="@+id/list_item_title" />
 
@@ -40,10 +74,10 @@
         android:id="@+id/list_item_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginRight="10dp"
         android:text="2018/9/13 14:30:10"
         android:textColor="@android:color/darker_gray"
         android:textSize="8sp"
-        android:layout_marginRight="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
